# media_downloader

./: .gitignore  defaults.py  fields.py  media_downloader.sh  process.py  pyproject.toml  pyside_gui.py  utils.py  yt-to-mp3.py  yt_helpers.py  yt_to_mp3.py
src/: fields.py  media_downloader.py  process.py  pyside_gui.py  utils.py
src/media_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
